...
					android:text="@string/enter_your_registered_email_address_and_we_ll_email_you_your_password_reset_instructions"
					android:textColor="@color/white"
					android:textSize="14sp" />
				
				<!--Email-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputEmail"
					style="@style/InputTextStyle"
					android:layout_gravity="center"
					android:layout_marginTop="20sp"
					android:hint="@string/hint_email_address"
					android:inputType="textEmailAddress">
					
					<requestFocus />
				</androidx.appcompat.widget.AppCompatEditText>
				
				
				<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/btnSend"
					style="@style/ButtonStyle"
					android:layout_width="match_parent"
					android:layout_gravity="center"
					android:layout_marginTop="60sp"
					android:layout_marginBottom="10sp"
					android:text="@string/reset_password" />
...
