...

    /***************** ALERT MESSAGES ***************/
    <string name="alert_enter_first_name">Please enter first name</string>
    <string name="alert_invalid_first_name_character">First name should only contain characters or white space.  </string>
    <string name="alert_enter_last_name">Please enter last name</string>
    <string name="alert_invalid_last_name_character">Last name should only contain characters or white space.  </string>
    <string name="alert_enter_email">Please enter email</string>
    <string name="alert_enter_valid_email">Please enter valid email</string>
    <string name="alert_enter_mobile_number">Please enter the phone number</string>
    <string name="alert_invalid_phone_number">Phone number should be 10 to 13 digits</string>
    <string name="alert_enter_password">Please enter password</string>
    <string name="alert_enter_old_password">Please enter old password</string>
    <string name="alert_enter_new_password">Please enter new password</string>
    <string name="alert_enter_confirm_password">Please enter confirm password</string>
...
    <string name="alert_enter_otp">Please enter otp</string>
    <string name="alert_msg_password_and_confirm_password_not_same">Password and confirm password must be same</string>
    <string name="alert_enter_reason">Please enter your reason</string>
    <string name="alert_valid_password">Password length must be between 6 and 15 characters and contain at least one number, one capital letter and one small letter</string>
    <string name="alert_accept_tnc_and_privacy">Please agree to terms and conditions and privacy policy</string>
    <string name="alert_confirm_password_not_match">New password and confirm password must be same</string>
    <string name="alert_enter_brief">Please enter brief explanation</string>
    <string name="alert_enter_reason_for_tax">Please select reason for change tax.</string>
    <string name="alert_enter_tax">Please enter tax amount.</string>
    <string name="alert_enter_tip">Please enter tip amount.</string>
    <string name="alert_tax_amount_greater_than_total">Tax amount should be less than Pre Total amount.</string>
    <string name="alert_tax_percentage">Tax percentage should not be more than %1$s</string>
    <string name="alert_tip_percentage">Tip percentage should not be more than %1$s</string>
...
