...
					app:counterEnabled="true"
					app:counterMaxLength="@integer/feedback_max_length"
					app:counterTextAppearance="@color/colorPrimaryDark"
					app:hintEnabled="false">
					<!--Email-->
					<androidx.appcompat.widget.AppCompatEditText
						android:id="@+id/inputBrief"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="@drawable/bg_rounded_white_border"
						android:gravity="start|top"
						android:hint="@string/hint_briefly_explain_what_happened"
						android:inputType="textMultiLine"
...
					android:gravity="center"
					android:text="@string/msg_report_problem"
					android:textColor="@color/white"
					android:textSize="13sp" />
				
				<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/btnSend"
					style="@style/ButtonStyle"
					android:layout_width="match_parent"
					android:layout_gravity="center"
					android:layout_marginTop="20sp"
					android:text="@string/send" />
			
...
